[package]
name = "id-worker"
version = "0.1.9"
edition = "2021"
description = "Cloudflare worker for providing ip address id"
license = "Apache-2.0"
repository = "https://github.com/a1ecbr0wn/id"
readme = "README.md"
categories = ["networking", "internet"]
authors = [ "Δ ǀ Ξ ȼ <alec@noser.net>" ]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.5.0"
serde_json = "1.0"
wasm-timer = "0.2.5"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
codegen-units = 1

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
